# voxelio.rsmcdoc

./: .gitignore  Cargo.toml  OPTIMIZATION_RESULTS.md  README.md  TODO.md  clean-and-compress-dataset.ps1  wasm.ps1
.cargo/: config.toml
benches/: performance.rs
demo/: index.html  script.js  styles.css
package/: pnpm-lock.yaml  tsdown.config.ts
package/src/: index.ts
src/: error.rs  lexer.rs  lib.rs  parser.rs  registry.rs  resolver.rs  types.rs  validator.rs  wasm.rs
tests/: integration_tests.rs  lexer_negative_numbers_tests.rs  lexer_tests.rs  lib_tests.rs  model_mcdoc_array_constraint_tests.rs  model_mcdoc_bug_tests.rs  parser_annotation_newline_tests.rs  parser_array_constraint_union_tests.rs  parser_dispatch_types_tests.rs  parser_fix_tests.rs  parser_gametest_bug_tests.rs  parser_generic_types_fix_tests.rs  parser_generic_types_tests.rs  parser_literal_constraint_tests.rs  parser_model_mcdoc_bug_fix_tests.rs  parser_particle_bug_tests.rs  parser_percent_token_tests.rs  parser_tests.rs  registry_tests.rs  resolver_tests.rs  types_tests.rs  validator_literal_constraint_tests.rs  validator_tests.rs
tests/dataset/: clean-and-compress-dataset.ps1  data.min.json
