[package]
name = "voxel-rsmcdoc"
version = "0.1.0"
edition = "2021"
description = "MCDOC parser for Minecraft datapack validation"
license = "MIT"
repository = "https://github.com/voxel-community/voxel-rsmcdoc"
exclude = ["examples/", "tests/", "docs/", "*.ps1", "wasm_demo.ts"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Performance optimizations
rustc-hash = "2.0"  # FxHashMap - actually used for HashMap replacements

# WASM bindings (conditional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true, default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = "s"        # Optimize for size
lto = "fat"            # Maximum link time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Remove panic unwinding
strip = "symbols"      # Strip debug symbols
overflow-checks = false # Remove overflow checks
debug-assertions = false # Remove debug assertions

[profile.release.package."*"]
opt-level = "s"        # Force size optimization for all deps

# Target WASM specific optimizations
[profile.release.package.wasm-bindgen]
opt-level = "s"

[profile.release.package.js-sys]  
opt-level = "s"

[profile.release.package.web-sys]
opt-level = "s"

[features]
default = []  # No default features
wasm = ["wasm-bindgen", "js-sys"]
wasm-full = ["wasm", "wasm-bindgen-futures", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"] 